# package/handler/tables.go
@@ -32,6 +32,60 @@ func (handler *Handler) GetAllTable(ctx *gin.Context) {
 	})
 }
 
+// @Summary Get courses
+// @Tags Table
+// @Description get  courses
+// @ID get-course
+// @Accept  json
+// @Produce  json
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /tables/course/get [GET]
+func (handler *Handler) GetAllCourse(ctx *gin.Context) {
+	logrus := handler.logrus
+
+	contacts, err := handler.services.Table.GetAllCourse(logrus)
+	if err != nil {
+		NewHandlerErrorResponse(ctx, http.StatusInternalServerError, err.Error(), logrus)
+	}
+
+	ctx.JSON(http.StatusOK, map[string]interface{}{
+		"data": contacts,
+	})
+}
+
+// @Summary Create CoursePost
+// @Tags Table
+// @Description create course_post
+// @ID create-course_post
+// @Accept  json
+// @Produce  json
+// @Param input body model.CourseFull true "table info"
+// @Success 200 {object} ResponseSuccess
+// @Failure 400,404 {object} errorResponse
+// @Failure 409 {object} errorResponseData
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/table/course/create [post]
+//@Security ApiKeyAuth
+func (handler *Handler) CreateCoursePost(ctx *gin.Context) {
+	logrus := handler.logrus
+	var input model.CourseFull
+	err := ctx.BindJSON(&input)
+	if err != nil {
+		NewHandlerErrorResponse(ctx, http.StatusBadRequest, err.Error(), logrus)
+		return
+	}
+
+	Id, err := handler.services.CreateCoursePost(input, logrus)
+	if err != nil {
+		NewHandlerErrorResponse(ctx, http.StatusBadRequest, err.Error(), logrus)
+		return
+	}
+	ctx.JSON(http.StatusOK, ResponseSuccess{Data: Id, Message: "DONE"})
+}
+
 // @Summary Create TablePost
 // @Tags Table
 // @Description create table_post
@@ -126,7 +180,7 @@ func (handler *Handler) uploadTableImage(ctx *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Param        id   path  int     true "Param ID"
-// @Param input body model.NewsPost true "home info"
+// @Param input body model.TablePost true "home info"
 // @Success 200 {object} ResponseSuccess
 // @Failure 400,404 {object} errorResponse
 // @Failure 409 {object} errorResponseData
@@ -210,6 +264,31 @@ func (h *Handler) DeleteTable(ctx *gin.Context) {
 	id := ctx.Query("id")
 
 	h.services.Table.DeleteTable(id, logrus)
+	ctx.JSON(http.StatusOK, map[string]interface{}{
+		"id":      id,
+		"message": "deleted",
+	})
+}
+
+// @Summary Get Delete Coures
+// @Tags Table
+// @Description delete table
+// @ID delete-course
+// @Accept  json
+// @Produce  json
+// @Param id query int true "id"
+// @Success 200 {object} model.TableFull
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/table/course/delete [DELETE]
+//@Security ApiKeyAuth
+func (h *Handler) DeleteCourse(ctx *gin.Context) {
+
+	logrus := h.logrus
+	id := ctx.Query("id")
+
+	h.services.Table.DeleteCourse(id, logrus)
 	ctx.JSON(http.StatusOK, map[string]interface{}{
 		"id":      id,
 		"message": "deleted",
